# sfntly

cpp/: CMakeLists.txt  build_universal_icu.sh  cmake-xcode.sh
cpp/src/sfntly/port/: atomic.h  refcount.h  type.h
